# wanalyzer-io-api

./: .coveragerc  .editorconfig  .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  heroku.yml  pyproject.toml
.github/workflows/: codeql.yml  python.yml
app/: main.py
app/api/api_v1/endpoints/: user.py
app/core/: get_top_20.py  worker.py
app/db/: base.py
app/models/: models.py
app/schemas/: schemas.py
app/tests/: test_main.py
