[tool.poetry]
name = "wanalyzer-io-api"
version = "0.1.0"
description = "wanalyzer.io api"
authors = ["Donald Gifford <dgifford06@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
