[tool.poetry]
name = "wanalyzer-io-api"
version = "0.1.0"
description = "wanalyzer.io api"
authors = ["Donald Gifford <dgifford06@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.14.0"
fastapi = "^0.65.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
requests = "^2.25.1"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
